--- a/server_config/etc/php-fpm.conf
+++ b/server_config/etc/php-fpm.conf
@@ -9,18 +9,18 @@ listen.backlog = 65536
 listen.allowed_clients = 127.0.0.1
 user = vagrant
 group = vagrant
-#catch_workers_output = yes
-#request_terminate_timeout = 180
-#emergency_restart_threshold = 5
-#emergency_restart_interval = 1h
-#process_control_timeout = 30s
+;catch_workers_output = yes
+;request_terminate_timeout = 180
+;emergency_restart_threshold = 5
+;emergency_restart_interval = 1h
+;process_control_timeout = 30s
 
 pm = static
 pm.max_children = 107
-#pm.start_servers = 200
-#pm.min_spare_servers = 200
-#pm.max_spare_servers = 200
+;pm.start_servers = 200
+;pm.min_spare_servers = 200
+;pm.max_spare_servers = 200
 pm.max_requests = 10000
 pm.status_path = /status/frontend
-#slowlog = /var/log/php-fpm/www-slow.log
-#request_slowlog_timeout = 7
+;slowlog = /var/log/php-fpm/www-slow.log
+;request_slowlog_timeout = 7
